--- a/environment.yml
+++ b/environment.yml
@@ -1,62 +1,142 @@
 name: perplexity
 channels:
   - pytorch
+  - nvidia
   - defaults
   - conda-forge
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_kmp_llvm
+  - abseil-cpp=20211102.0=hd4dd3e8_0
+  - arrow-cpp=11.0.0=h374c478_1
+  - async-timeout=4.0.2=py311h06a4308_0
+  - aws-c-common=0.6.8=h5eee18b_1
+  - aws-c-event-stream=0.1.6=h6a678d5_6
+  - aws-checksums=0.1.11=h5eee18b_2
+  - aws-sdk-cpp=1.8.185=h721c034_1
   - blas=1.0=mkl
+  - boost-cpp=1.73.0=h7f8727e_12
+  - bottleneck=1.3.5=py311hbed6279_0
+  - brotlipy=0.7.0=py311h5eee18b_1002
   - bzip2=1.0.8=h7b6447c_0
+  - c-ares=1.19.0=h5eee18b_0
   - ca-certificates=2023.05.30=h06a4308_0
+  - certifi=2023.7.22=py311h06a4308_0
+  - cffi=1.15.1=py311h5eee18b_3
+  - click=8.0.4=py311h06a4308_0
+  - cryptography=41.0.2=py311h22a60cf_0
+  - cuda-cudart=11.7.99=0
+  - cuda-cupti=11.7.101=0
+  - cuda-libraries=11.7.1=0
+  - cuda-nvrtc=11.7.99=0
+  - cuda-nvtx=11.7.91=0
+  - cuda-runtime=11.7.1=0
   - cudatoolkit=11.7.1=h4bc3d14_12
+  - datasets=2.12.0=py311h06a4308_0
+  - dill=0.3.6=py311h06a4308_0
   - filelock=3.9.0=py311h06a4308_0
+  - gflags=2.2.2=he6710b0_0
+  - glog=0.5.0=h2531618_0
   - gmp=6.2.1=h295c915_3
   - gmpy2=2.1.2=py311hc9b5ff0_0
+  - grpc-cpp=1.48.2=he1ff14a_1
+  - huggingface_hub=0.15.1=py311h06a4308_0
+  - icu=58.2=he6710b0_3
+  - idna=3.4=py311h06a4308_0
   - intel-openmp=2023.1.0=hdb19cb5_46305
   - jinja2=3.1.2=py311h06a4308_0
+  - joblib=1.2.0=py311h06a4308_0
+  - krb5=1.20.1=h143b758_1
   - ld_impl_linux-64=2.38=h1181459_1
+  - libboost=1.73.0=h28710b8_12
+  - libbrotlicommon=1.0.9=h5eee18b_7
+  - libbrotlidec=1.0.9=h5eee18b_7
+  - libbrotlienc=1.0.9=h5eee18b_7
+  - libcublas=11.10.3.66=0
+  - libcufft=10.7.2.124=h4fbf590_0
+  - libcufile=1.7.1.12=0
+  - libcurand=10.3.3.129=0
+  - libcurl=8.1.1=h251f7ec_1
+  - libcusolver=11.4.0.1=0
+  - libcusparse=11.7.4.91=0
+  - libedit=3.1.20221030=h5eee18b_0
+  - libev=4.33=h7f8727e_1
+  - libevent=2.1.12=hdbd6064_1
   - libffi=3.4.4=h6a678d5_0
   - libgcc-ng=13.1.0=he5830b7_0
+  - libnghttp2=1.52.0=h2d74bed_1
+  - libnpp=11.7.4.75=0
+  - libnvjpeg=11.8.0.2=0
+  - libprotobuf=3.20.3=he621ea3_0
+  - libssh2=1.10.0=hdbd6064_2
   - libstdcxx-ng=13.1.0=hfd8a6a1_0
+  - libthrift=0.15.0=h1795dd8_2
   - libuuid=1.41.5=h5eee18b_0
   - llvm-openmp=14.0.6=h9e868ea_0
+  - lz4-c=1.9.4=h6a678d5_0
   - markupsafe=2.1.1=py311h5eee18b_0
   - mkl=2023.1.0=h6d00ec8_46342
+  - mkl-service=2.4.0=py311h5eee18b_1
+  - mkl_fft=1.3.6=py311ha02d727_1
+  - mkl_random=1.2.2=py311ha02d727_1
   - mpc=1.1.0=h10f8cd9_1
   - mpfr=4.0.2=hb69a4c5_1
   - mpmath=1.3.0=py311h06a4308_0
+  - multiprocess=0.70.14=py311h06a4308_0
   - ncurses=6.4=h6a678d5_0
   - networkx=3.1=py311h06a4308_0
+  - numexpr=2.8.4=py311h65dcdc2_1
+  - numpy-base=1.25.0=py311hf175353_0
   - openssl=3.0.9=h7f8727e_0
+  - orc=1.7.4=hb3bc3d3_1
+  - pandas=1.5.3=py311hba01205_0
   - pip=23.2.1=py311h06a4308_0
+  - pyarrow=11.0.0=py311hd8e8d9b_0
+  - pycparser=2.21=pyhd3eb1b0_0
+  - pyopenssl=23.2.0=py311h06a4308_0
+  - pysocks=1.7.1=py311h06a4308_0
   - python=3.11.4=h955ad1f_0
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-xxhash=2.0.2=py311h5eee18b_1
   - pytorch=2.0.1=py3.11_cpu_0
+  - pytorch-cuda=11.7=h778d358_5
   - pytorch-mutex=1.0=cpu
+  - pytz=2022.7=py311h06a4308_0
+  - re2=2022.04.01=h295c915_0
   - readline=8.2=h5eee18b_0
+  - requests=2.31.0=py311h06a4308_0
+  - responses=0.13.3=pyhd3eb1b0_0
+  - sacremoses=0.0.43=pyhd3eb1b0_0
   - setuptools=68.0.0=py311h06a4308_0
+  - six=1.16.0=pyhd3eb1b0_1
+  - snappy=1.1.9=h295c915_0
   - sqlite=3.41.2=h5eee18b_0
   - sympy=1.11.1=py311h06a4308_0
   - tbb=2021.8.0=hdb19cb5_0
   - tk=8.6.12=h1ccaba5_0
+  - tqdm=4.65.0=py311h92b7b1e_0
+  - typing-extensions=4.7.1=py311h06a4308_0
   - typing_extensions=4.7.1=py311h06a4308_0
   - tzdata=2023c=h04d1e81_0
+  - utf8proc=2.6.1=h27cfd23_0
   - wheel=0.38.4=py311h06a4308_0
+  - xxhash=0.8.0=h7f8727e_3
   - xz=5.4.2=h5eee18b_0
+  - yaml=0.2.5=h7b6447c_0
   - zlib=1.2.13=h5eee18b_0
+  - zstd=1.5.5=hc292b87_0
   - pip:
       - accelerate==0.21.0
       - aiohttp==3.8.5
       - aiosignal==1.3.1
-      - async-timeout==4.0.2
       - attrs==23.1.0
-      - certifi==2023.7.22
+      - chardet==5.2.0
       - charset-normalizer==3.2.0
       - frozenlist==1.4.0
       - fsspec==2023.6.0
       - huggingface-hub==0.16.4
-      - idna==3.4
       - lmppl==0.3.1
+      - lmppl-code==0.2
       - multidict==6.0.4
       - numpy==1.25.2
       - openai==0.27.8
@@ -66,11 +146,9 @@ dependencies:
       - pygments==2.15.1
       - pyyaml==6.0.1
       - regex==2023.6.3
-      - requests==2.31.0
       - safetensors==0.3.1
       - sentencepiece==0.1.99
       - tokenizers==0.13.3
-      - tqdm==4.65.0
       - transformers==4.31.0
       - urllib3==2.0.4
       - yarl==1.9.2
